chore: #7 add env example files

--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,13 @@ build/
 
 # Local env files
 .env
-.env.local
-.env.*.local
 .env.*
 .venv/
+
+# but allow examples
+!.env.example
+!.env.local.example
+!.env.local.docker.example
 
 # Vite cache
 .vite/
