--- a/pt-web/package.json
+++ b/pt-web/package.json
@@ -22,7 +22,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-router-dom": "7.7.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "9.32.0",
