--- a/gateway/local.nginx.conf
+++ b/gateway/local.nginx.conf
@@ -41,6 +41,29 @@ http {
             proxy_set_header Connection "upgrade";
         }
 
+        # ---- Backend WebSocket (FastAPI) ----
+        location /br-general/ws/ {
+
+            proxy_pass http://host.docker.internal:8000/br-general/ws/;
+            proxy_http_version 1.1;
+
+            # WebSocket headers
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
+            # Standard proxy headers
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+
+            # Optional but recommended
+            proxy_buffering off;
+        }
+        
         # ---- Backend (FastAPI inside Docker) ----
         location /br-general/ {
 
@@ -69,7 +92,7 @@ http {
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Refresh-Token, X-Requested-With' always;
             add_header 'Vary' 'Origin' always;
         }
-
+     
         # ---- Grafana (optional) ----
         location /grafana/ {
             proxy_pass http://host.docker.internal:9876/;
