--- a/pt-web/.env.local.example
+++ b/pt-web/.env.local.example
@@ -1,3 +1,3 @@
 API_BASE_PATH=http://localhost:5173/br-general
 ENV_TYPE=dev
-WS_PATH=http://localhost:5173/br-general/ws
+WS_PATH=http://localhost:5173/br-general/ws/
