--- a/pt-web/package.json
+++ b/pt-web/package.json
@@ -35,7 +35,9 @@
     "@vitejs/plugin-react-swc": "3.10.2",
     "envalid": "8.1.0",
     "eslint": "9.32.0",
+    "eslint-config-prettier": "10.1.8",
     "eslint-plugin-jsdoc": "51.4.1",
+    "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
