feat: #11 add WhatsApp webhook verification and normalization

--- a/br-general-python/.env.local.docker.example
+++ b/br-general-python/.env.local.docker.example
@@ -1,7 +1,5 @@
-# ============================================
-# SERVER
-# ============================================
 SERVER_PORT=8000
+# "dev" or "prod"
 ENV_TYPE=dev
 WEBAPP_DOMAIN=localhost
 APP_BASE_URL=http://localhost:8000
