feat: #8 create AI drafting as TODO. CREATED:         app/api/ai.py         app/services/ai_service.py

--- a/br-general-python/.env.local.example
+++ b/br-general-python/.env.local.example
@@ -9,9 +9,9 @@ APP_BASE_URL=http://localhost:8000
 # ============================================
 # DATABASE
 # ============================================
-POSTGRES_USER=postgres
+POSTGRES_USER=root
 POSTGRES_PASSWORD=secret
-POSTGRES_DB=unified_chat_db
+POSTGRES_DB=mastersway_db
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}"
 
 # ============================================
