fix: #11 stabilize health check and align base configuration

--- a/br-general-python/.env.local.example
+++ b/br-general-python/.env.local.example
@@ -20,8 +20,8 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/
 # ============================================
 SMTP_HOST=localhost
 SMTP_PORT=1025
-SMTP_USER=
-SMTP_PASSWORD=
+SMTP_USER=smtp_user
+SMTP_PASSWORD=smtp_password
 SMTP_STARTTLS=false
 SMTP_SSL=false
 SMTP_SENDER_EMAIL=no-reply@example.com
@@ -51,9 +51,8 @@ WHATSAPP_ACCESS_TOKEN=your-whatsapp-access-token
 
 # Facebook Messenger
 FACEBOOK_PAGE_ACCESS_TOKEN=your-page-access-token
-
 # Instagram (optional, can use same as Facebook)
-IG_PAGE_ACCESS_TOKEN=
+IG_PAGE_ACCESS_TOKEN=instagram-page-access-token
 
 # ============================================
 # STRIPE PAYMENTS
@@ -64,7 +63,7 @@ STRIPE_SECRET_KEY=sk_test_your-secret-key
 STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret
 
 # ============================================
-# OPENAI (TODO - for AI drafting)
+# OPENAI
 # ============================================
 # Get from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=
+OPENAI_API_KEY=apenapi_key_here
