--- a/br-general-python/.env.local.docker.example
+++ b/br-general-python/.env.local.docker.example
@@ -50,7 +50,7 @@ WHATSAPP_ACCESS_TOKEN=your-whatsapp-access-token
 FACEBOOK_PAGE_ACCESS_TOKEN=your-page-access-token
 
 # Instagram (optional, can use same as Facebook)
-IG_PAGE_ACCESS_TOKEN=
+IG_PAGE_ACCESS_TOKEN=instagram-page-access-token
 
 # ============================================
 # STRIPE PAYMENTS
@@ -61,7 +61,7 @@ STRIPE_SECRET_KEY=sk_test_your-secret-key
 STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret
 
 # ============================================
-# OPENAI (TODO - for AI drafting)
+# OPENAI
 # ============================================
 # Get from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=
+OPENAI_API_KEY=apenapi_key_here
