feat: #11 add guarded websocket broadcast endpoint

--- a/br-general-python/.env.local.docker.example
+++ b/br-general-python/.env.local.docker.example
@@ -65,3 +65,8 @@ STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret
 # ============================================
 # Get from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=apenapi_key_here
+
+# ============================================
+# WEBSOCKET BROADCAST ENDPOINT CONFIGURATION (False / True)
+# ============================================
+ENABLE_WS_BROADCAST_ENDPOINT=False
