refactor: #11 split health readiness and domain events

--- a/br-general-python/.env.local.docker.example
+++ b/br-general-python/.env.local.docker.example
@@ -1,3 +1,6 @@
+# ============================================
+# SERVER
+# ============================================
 SERVER_PORT=8000
 # "dev" or "prod"
 ENV_TYPE=dev
