refactor: #11 health readiness and domain events (#18)
* feat: #11 add WhatsApp webhook verification and normalization

* feat: #11 add WhatsApp messages persistence and migration

* fix: #11 stabilize health check and align base configuration

* feat: #11 add guarded websocket broadcast endpoint

* refactor: #11 split health readiness and domain events

* test: #11 websocket broadcasting coverage and docs (#19)

* fix: #11 remove duplicate messages migration

--- a/br-general-python/.env.local.docker.example
+++ b/br-general-python/.env.local.docker.example
@@ -2,6 +2,7 @@
 # SERVER
 # ============================================
 SERVER_PORT=8000
+# "dev" or "prod"
 ENV_TYPE=dev
 WEBAPP_DOMAIN=localhost
 APP_BASE_URL=http://localhost:8000
@@ -52,7 +53,7 @@ WHATSAPP_ACCESS_TOKEN=your-whatsapp-access-token
 FACEBOOK_PAGE_ACCESS_TOKEN=your-page-access-token
 
 # Instagram (optional, can use same as Facebook)
-IG_PAGE_ACCESS_TOKEN=
+IG_PAGE_ACCESS_TOKEN=instagram-page-access-token
 
 # ============================================
 # STRIPE PAYMENTS
@@ -63,7 +64,12 @@ STRIPE_SECRET_KEY=sk_test_your-secret-key
 STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret
 
 # ============================================
-# OPENAI (TODO - for AI drafting)
+# OPENAI
 # ============================================
 # Get from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=
+OPENAI_API_KEY=apenapi_key_here
+
+# ============================================
+# WEBSOCKET BROADCAST ENDPOINT CONFIGURATION (False / True)
+# ============================================
+ENABLE_WS_BROADCAST_ENDPOINT=False
