feat: #11 add auth guards and conversation subscription ACLs

--- a/br-general-python/.env.local.example
+++ b/br-general-python/.env.local.example
@@ -72,3 +72,8 @@ OPENAI_API_KEY=apenapi_key_here
 # WEBSOCKET BROADCAST ENDPOINT CONFIGURATION (False / True)
 # ============================================
 ENABLE_WS_BROADCAST_ENDPOINT=False
+
+# ============================================
+# WEBSOCKET IDLE TIMEOUT IN SECONDS (2 hours default)
+# ============================================
+WS_IDLE_TIMEOUT_SECONDS=7200
