feat: #1 add Caddy configuration as alternative to Nginx
- Add Caddyfile for production (auto HTTPS for demo.ai.crm.cs7.link)
- Add Caddyfile.local for local development (HTTP only)
- Add docker-compose.caddy.yml for production deployment
- Add local.caddy.docker-compose.yml for local Docker environment

Caddy provides automatic SSL certificate management via Let's Encrypt.
Nginx configuration remains unchanged for backward compatibility.

--- a/br-general-python/Dockerfile
+++ b/br-general-python/Dockerfile
@@ -57,4 +57,4 @@ COPY --from=builder /root/.cache/prisma-python /root/.cache/prisma-python
 
 VOLUME /app/logs
 EXPOSE 8000
-CMD ["python", "app/run.py"]
+CMD ["python", "-m", "app.run"]
