feat: #15 added Prisma migration in dc

--- a/br-general-python/Dockerfile
+++ b/br-general-python/Dockerfile
@@ -43,6 +43,7 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y --no-install-recommends \
     tzdata \
     ca-certificates \
+    libatomic1 \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy python deps + binaries
