--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,26 @@ services:
       - ./br-general-python/.env
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U root -d mastersway_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+
+  br-migrate:
+    build:
+      context: .
+      dockerfile: br-general-python/Dockerfile
+    command: [ "python", "-m", "prisma", "migrate", "deploy" ]
+    depends_on:
+      br-postgres-general:
+        condition: service_healthy
+    env_file:
+      - ./br-general-python/.env
+    networks:
+      - app-network
+    restart: on-failure:3
 
   br-general-python:
     build:
@@ -19,7 +39,12 @@ services:
     ports:
       - "127.0.0.1:8000:8000"
     depends_on:
-      - br-postgres-general
+      br-postgres-general:
+        condition: service_healthy
+      br-migrate:
+        condition: service_completed_successfully
+    env_file:
+      - ./br-general-python/.env
     networks:
       - app-network
 
@@ -28,13 +53,24 @@ services:
       context: .
       dockerfile: ./pt-web/Dockerfile
     ports:
-      - "127.0.0.1:5174:80"
+      - "127.0.0.1:5174:5174"
+    networks:
+      - app-network
+
+  br-grafana:
+    build:
+      context: .
+      dockerfile: ./grafana/Dockerfile
+    ports:
+      - "127.0.0.1:3000:3000"
+    env_file:
+      - ./grafana/.env
     networks:
       - app-network
 
   br-gateway:
-    image: nginx:1.24.0-alpine
-    container_name: nginx
+    image: caddy:2.8-alpine
+    container_name: caddy
     depends_on:
       - br-general-python
       - br-web
@@ -42,18 +78,24 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./gateway/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /home/user/docker-certs/brain100.help/fullchain.pem:/etc/ssl/certs/fullchain.pem:ro
-      - /home/user/docker-certs/brain100.help/privkey.pem:/etc/ssl/private/privkey.pem:ro
-      #      - ./gateway/certs/fullchain.pem:/etc/ssl/certs/fullchain.pem:ro
-      #      - ./gateway/certs/privkey.pem:/etc/ssl/private/privkey.pem:ro
-
+      - ./gateway/Caddyfile:/etc/caddy/Caddyfile:ro
+      - caddy_data:/data
+      - caddy_config:/config
+      - caddy_logs:/var/log/caddy
     networks:
       - app-network
-
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:80/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
 
 volumes:
   br-postgres-general:
+  caddy_data:
+  caddy_config:
+  caddy_logs:
 
 networks:
   app-network:
