--- a/pt-web/.env.local.docker.example
+++ b/pt-web/.env.local.docker.example
@@ -1,3 +1,3 @@
-API_BASE_PATH=http://localhost:80
+API_BASE_PATH=http://localhost:80/br-general
 ENV_TYPE=dev
 WS_PATH=http://localhost:80/br-general/ws/ws
