refactor: #61 canceled modifies of examples .env files about prefix

--- a/br-general-python/.env.local.docker.example
+++ b/br-general-python/.env.local.docker.example
@@ -5,7 +5,7 @@ SERVER_PORT=8000
 # "dev" or "prod"
 ENV_TYPE=dev
 WEBAPP_DOMAIN=localhost
-APP_BASE_URL=http://localhost:8000/br-general
+APP_BASE_URL=http://localhost:8000
 
 # ============================================
 # DATABASE
